--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:0.6.1"
+        compile "com.badlogicgames.gdx:gdx-ai:1.5.0"
     }
 }
 
