Fixed bouncing only working on the left side of the player

--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.import.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.import.prefs
@@ -1,5 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleImportPreferences
-#Fri Mar 27 21:24:24 CDT 2015
+#Mon Apr 06 10:50:55 CDT 2015
 addResourceFilters=true
 afterTasks=afterEclipseImport;
 beforeTasks=cleanEclipse;eclipse;
@@ -7,4 +7,4 @@ enableAfterTasks=true
 enableBeforeTasks=true
 enableDSLD=false
 enableDependendencyManagement=true
-projects=desktop;
+projects=;core;desktop;
